# teddy-bear-hospital

./: LICENSE  README.md
backend/: pyproject.toml
backend/app/: app.py
frontend/: index.html  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: Camera.tsx
