[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-cli>=0.0.7",
    "pydantic>=2.11.3",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pyright>=1.1.399",
    "ruff>=0.11.5",
]
